Bug 441345 - Missing patterns in Krita 5 beta1 from Krita 4
Summary: Missing patterns in Krita 5 beta1 from Krita 4
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-22 08:15 UTC by anno2300
Modified: 2021-08-27 07:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description anno2300 2021-08-22 08:15:16 UTC
Missed patterns from Krita 4 default (not additional resources loaded or in the resource folder), not available in Krita 5 beta1, but some brushes need it from the Krita_4_Default_Resources or Local Folder, and even much more from highly recommended bundles from the Krita Extra Pages and Youtube Channel:
4-paper-soft-grain-testdark-black55.png, 4-paper-soft-grain-testtweak2.png, 4-paper-soft-grain-testdark-black15.png, 4-flathack-black55.png, tex9.png

Maybe the issue is that they aren't in Krita 5 cause in Krita 4, there is still a weird thing that happens to this pattern:
They are only visible in Krita 4 if you select a random brush in the brush editor, expand the brush list to the left in the brush editor, go to the settings tab pattern that you see all patterns, then select one of the brush in the followed list i post, then the new pattern pops up! But before, the pattern was not visible in Krita 4. Maybe cause this, they missed in Krita 5? 

Followed brush presets have this problem:
f) Dry Roller (4-paper-soft-grain-testdark-black55.png)
g) Dry Brushing (4-paper-soft-grain-testtweak2.png)
g) Dry Textured Creases (tex9.png)
h) Chalk Details (4-paper-soft-grain-testdark-black15.png)
i) Wet Paint (4-flathack-black55.png)
i) Wet Paint Details (4-flathack-black55.png)
i) Wet Textured Soft (4-paper-soft-grain-testdark-black55.png)
k) Blender Basic (4-flathack-black55.png)
k) Blender Textured Soft (4-paper-soft-grain-testdark-black55.png)
y) Texture Wood Fiber (4-paper-soft-grain-testdark-black15.png)

All this brushes works correct (just my opinion) without the patterns are visible in the library, what is weird. However, the big problem is that other bundles also have brushes they uses this patterns, and all these brushes don't work now (from Digital Atelier and much more from the Krita Extra Download Sites). 

Is it possible that the patterns are saved in the brush preset in Krita 4 (not as a pattern) and it was able to load in the pattern library, and in Krita 5 it is no possible, and with it, only the brushes that are default works without the visible pattern. But the others from the bundle don't work now?

As a side note, this patterns aren't able to export in the bundle in Krita 4... They just missed in the bundle even if you select it to export, at least for me in Krita 4.4.7. So I'm not able to fix it temporarely by export the needed pattern.


SOFTWARE/OS VERSIONS
macOS: Big Sur 11.5.1
Comment 1 Halla Rempt 2021-08-26 11:30:10 UTC
Yes, these are patterns embedded in the kpp file, and those only get loaded when the kpp file gets loaded. Krita 4 loads presets at startup, Krita 5 on demand, and unloads them afterwards. 

So it's not weird that the presets that embed the pattern work correctly: the pattern is loaded and added to the temporary memory resource storage when the preset is loaded.

And at one point, presets no longer contained the actual pattern, but only the filename, and from that point on we were in trouble:
Comment 2 Halla Rempt 2021-08-26 13:31:12 UTC
Git commit ca5928f1eab31b7379a9049c06a85cad067a732c by Halla Rempt.
Committed on 26/08/2021 at 13:31.
Pushed by rempt into branch 'master'.

Add a fall to find unloaded dependent resources that referenced from other resources

M  +41   -7    libs/resources/KisResourceModel.cpp
M  +4    -1    libs/resources/KisResourceModel.h

https://invent.kde.org/graphics/krita/commit/ca5928f1eab31b7379a9049c06a85cad067a732c
Comment 3 Halla Rempt 2021-08-27 07:33:54 UTC
Git commit 0e6d9696a84991b1a1a8ad016bdcde28396e2aeb by Halla Rempt.
Committed on 26/08/2021 at 13:32.
Pushed by rempt into branch 'krita/5.0'.

Add a fall to find unloaded dependent resources that referenced from other resources
(cherry picked from commit ca5928f1eab31b7379a9049c06a85cad067a732c)

M  +41   -7    libs/resources/KisResourceModel.cpp
M  +4    -1    libs/resources/KisResourceModel.h

https://invent.kde.org/graphics/krita/commit/0e6d9696a84991b1a1a8ad016bdcde28396e2aeb