Add a fall to find unloaded dependent resources that referenced from other resources

BUG:441345
(cherry picked from commit ca5928f1eab31b7379a9049c06a85cad067a732c)